<resources>
    <string name="app_name">Insulyna</string>

    <!-- HOME -->
    <string name="app_title">Calcolatore di Unità di Insulina</string>
    <string name="title_insulin_units">Unità di Insulina:</string>
    <string name="saved_food">Cibi salvati</string>
    <string name="title_meal">PASTO</string>
    <string name="carbo_tot">Carboidrati totali (g):</string>
    <string name="glycemia_premeal">Glicemia (mg/dl):</string>
    <string name="title_add_carbo">AGGIUNGI CARBOIDRATI</string>
    <string name="exact_value">Valore esatto (g):</string>
    <string name="proportion">proporzione</string>
    <string name="carbo_on_100">Carboidrati/100g (g):</string>
    <string name="eaten_quantity">Quantità mangiata (g):</string>
    <string name="add_to_total">Aggiungi al totale</string>
    <string name="placeholder_UI">0,00</string>

    <string name="settings_icon">settings icon</string>
    <string name="syringe_image">syringe image</string>
    <string name="reset_meal_button">reset meal button</string>

    <!-- PREFERENCES -->
    <string name="preferences_title">Preferenze</string>
    <string name="values_title">VALORI PERSONALI</string>
    <string name="dailyUI_label">Fabbisogno giornaliero (UI):</string>
    <string name="dailyUI_extended">Fabbisogno insulinico giornaliero</string>
    <string name="dailyUI_description">E\' il valore di unità insuliniche giornaliere, ricavato sommando l\'insulina basale e i boli.</string>
    <string name="goal_label">Obiettivo glicemico (mg/dl):</string>
    <string name="goal_extended">Obiettivo glicemico</string>
    <string name="goal_description">Valore glicemico che si vuole raggiungere, solitamente fornito dal diabetologo.</string>
    <string name="rateo_label">Insulina/Carboidrati (g):</string>
    <string name="rateo_description">Quanti grammi di carboidrati vengono metabolizzati da 1 UI di insulina rapida.\nSe non sei in possesso del valore, temporaneamente si può calcolare usando la \"regola del 500\" ma deve essere confermato dal medico al più presto.</string>
    <string name="rateo_extended">Rapporto insulina/carboidrati</string>
    <string name="sensibility_label">Sensibilità insulinica (g):</string>
    <string name="sensibility_extended">Fattore di sensibilità insulinica</string>
    <string name="sensibility_description">Calo glicemico in mg/dl per effetto di 1 UI di insulina rapida.\nSe non sei in possesso del valore, temporaneamente si può calcolare usando la \"regola del 1800\" ma deve essere confermato dal medico al più presto.</string>
    <string name="save_button">Salva</string>
    <string name="backup">Backup cibi salvati</string>
    <string name="credits">Crediti e Informazioni</string>
    <string name="theme">Colori app:</string>
    <string name="dedication">per Giulia, da Davide</string>
    <string name="calculate">Calcola</string>
    <string name="select_color">Seleziona il colore</string>
    <string name="change_theme_label">Cambia tema</string>


    <string name="back_button">back button</string>
    <string name="question_mark">question mark</string>
    <string name="color_theme">color theme</string>
    <string name="color_to_choose">color to choose</string>
    <string name="copy">Copia i dati</string>
    <string name="save_backup_label">Inserisci il testo dei dati salvati oppure premi sul pulsante apposito per generare il backup. Incollalo per esempio in una chat o in un file di testo per salvarlo.</string>
    <string name="import_data">Importa dati:</string>
    <string name="placeholder_paste_here">incolla qui</string>

    <!-- SAVED FOOD -->
    <string name="food_title">Cibi salvati</string>
    <string name="search">Cerca</string>
    <string name="edit">modifica</string>
    <string name="delete">elimina</string>
    <string name="name">Nome:</string>
    <string name="carbo">Carboidrati (g):</string>
    <string name="switchA">per 100g</string>
    <string name="switchB">a pezzo</string>
    <string name="background_image">background image</string>
    <string name="add_fab">add fab</string>
    <string name="placeholder_food">Cibo placeholder</string>
    <string name="placeholder_carboinfood">125g/100g</string>
    <string name="add_food">AGGIUNGI CIBO</string>
    <string name="edit_food">MODIFICA CIBO</string>

    <!-- DISCLAIMER -->
    <string name="disclaimer_text">Quest\'app è stata pensata per semplificare la conta dei carboidrati e delle unità di insulina.\nNon sono un medico; i dati, le informazioni e i calcoli non sono stati approvati da alcun medico.\nDa utilizzare <u>con la testa</u> e solamente come conferma dei propri calcoli.\nLo sviluppatore non si assume alcuna responsabilità in caso di danni e/o problemi dovuti all\'utilizzo della stessa.</string>
    <string name="disclaimer_image">disclaimer image</string>
    <string name="disclaimer_button">Capisco e desidero procedere</string>
    <string name="disclaimer_title">ATTENZIONE</string>
    <string name="disclaimer_check">L\'utente si assume ogni responsabilità</string>

    <!-- CREDITS -->
    <string name="credits_giulia">Quest\'app è stata pensata e sviluppata come regalo per la mia fidanzata Giulia (auguri Giulietta ♡).\nSpero possa tornare utile anche ad altre persone.</string>
    <string name="credits_text"><b>Aiuti nello sviluppo:</b>\n
        <li><a href="https://github.com/davide-mod/Insulyna">GitHub</a>: dove è visibile il codice sorgente, le istruzioni per il funzionamento e puoi supportare il mio lavoro;</li>\n
        <li><a href="https://www.figma.com/community/plugin/735098390272716381/Iconify">Iconify</a>: plugin della piattaforma Figma per il design e le icone;</li>\n
        <li><a href="https://www.youtube.com/watch?v=2mQhDOtrDCE">Canale Youtube \"Diabete\"</a>: per la raccolta di informazioni e formule matematiche;</li>\n
        <li><a href="https://github.com/MiraxhTereziu">Miraxh</a>: studente al Master in Human-Computer Interaction che ha disegnato l\'icona e aiutato lo sviluppo.</li>
    </string>
    <string name = "contact_me">Hai trovato un problema o hai un\'idea per migliorare quest\'app? <u>Scrimi qui</u></string>
    <string name="calculate_and_add">Calcola e porta alla home</string>
    <string name="eaten_food_dialog">Grammi di cibo mangiati:</string>
    <string name="carbo_dialog">Carbo in 100g di prodotto:</string>

</resources>