<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    tools:context=".DisclaimerFragment">

    <TextView
        android:id="@+id/title"
        style="@style/sub_title"
        android:textSize="@dimen/UI_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:text="@string/disclaimer_title"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/marginElements"
        android:contentDescription="@string/disclaimer_image"
        android:src="@drawable/ic_stop"
        app:layout_constraintBottom_toTopOf="@id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/desc"
        style="@style/label"
        android:gravity="start"
        android:text="@string/disclaimer_text"
        android:padding="@dimen/marginElements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginElements"
        app:layout_constraintBottom_toTopOf="@id/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <CheckBox
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintBottom_toTopOf="@id/btn"
        android:id="@+id/check"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/disclaimer_check"
        style="@style/little_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/btn"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/red"
        android:visibility="gone"
        android:text="@string/disclaimer_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>