<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginElements"
    android:background="@drawable/background"
    android:padding="@dimen/marginStandard">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:text="@string/backup"
        app:layout_constraintBottom_toTopOf="@id/dialogDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogDescription"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:text="@string/save_backup_label"
        app:layout_constraintBottom_toTopOf="@id/pasteBackup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

    <EditText
        android:id="@+id/pasteBackup"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:autofillHints=""
        android:hint="@string/placeholder_paste_here"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/btnCopy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogDescription" />

    <TextView
        android:id="@+id/btnCopy"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:background="@drawable/background_button"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/copy"
        app:drawableLeftCompat="@drawable/ic_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pasteBackup" />

</androidx.constraintlayout.widget.ConstraintLayout>