<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/preferenceName"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginElements"
        android:layout_marginEnd="@dimen/marginStandard"
        android:layout_marginBottom="@dimen/marginStandard"
        android:gravity="center"
        android:text="@string/dailyUI_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/preferenceValue"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStandard"
        android:layout_marginEnd="@dimen/marginStandard"
        android:layout_marginBottom="@dimen/marginStandard"
        android:autofillHints="0,00"
        android:hint="@string/placeholder_UI"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/preferenceName"
        app:layout_constraintStart_toEndOf="@id/preferenceName"
        app:layout_constraintTop_toTopOf="@id/preferenceName" />

    <ImageView
        android:id="@+id/preferenceQuestion"
        android:layout_width="@dimen/label"
        android:layout_height="@dimen/label"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/marginStandard"
        android:contentDescription="@string/question_mark"
        android:src="@drawable/ic_questionmark"
        app:layout_constraintBottom_toBottomOf="@id/preferenceName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/preferenceName"
        app:tint="?attr/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>