<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CreditsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/topbarIcons"
            android:layout_height="@dimen/topbarIcons"
            android:layout_margin="@dimen/marginStandard"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/pageTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pageTitle" />

        <TextView
            android:id="@+id/pageTitle"
            style="@style/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginStandard"
            android:text="@string/credits"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Giulia"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginStandard"
        android:gravity="start"
        android:padding="@dimen/marginStandard"
        android:text="@string/credits_giulia"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <TextView
        android:id="@+id/help"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:fontFamily="@font/consolas"
        android:gravity="start"
        android:lineSpacingMultiplier="1.5"
        android:padding="@dimen/marginStandard"
        android:text="@string/credits_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/contactMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Giulia" />

    <TextView
        android:id="@+id/contactMe"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginElements"
        android:layout_marginEnd="@dimen/marginElements"
        android:layout_marginBottom="@dimen/marginStandard"
        android:text="@string/contact_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help" />

</androidx.constraintlayout.widget.ConstraintLayout>