<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginElements"
        android:layout_marginStart="@dimen/marginElements"
        android:layout_marginEnd="@dimen/marginElements"
        android:layout_marginTop="@dimen/bigPadding"
        app:boxStrokeWidth="0dp"
        app:layout_constraintBottom_toTopOf="@id/carboBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            style="@style/search_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/bg_grey"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/carboBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        app:boxStrokeWidth="0dp"
        app:layout_constraintBottom_toTopOf="@id/switchA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/carboText"
            style="@style/search_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/bg_grey"
            android:hint="@string/carbo" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/switchA"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginElements"
        android:layout_marginStart="@dimen/marginElements"
        android:layout_marginEnd="@dimen/marginElements"
        android:layout_marginBottom="@dimen/bigPadding"
        android:background="@drawable/background_button"
        android:backgroundTint="?attr/colorPrimary"
        android:paddingStart="@dimen/marginElements"
        android:paddingEnd="@dimen/marginElements"
        android:text="@string/switchA"
        app:drawableLeftCompat="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switchB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carboBox" />

    <TextView
        android:id="@+id/switchB"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:background="@drawable/background_button"
        android:backgroundTint="?attr/colorPrimary"
        android:paddingStart="@dimen/marginElements"
        android:paddingEnd="@dimen/marginElements"
        android:text="@string/switchB"
        app:drawableLeftCompat="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="@id/switchA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/switchA"
        app:layout_constraintTop_toTopOf="@id/switchA" />


</androidx.constraintlayout.widget.ConstraintLayout>